--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "http://www.github.com/happy0/ssb-embedded-chat"
   },
   "dependencies": {
+    "depject": "4.1.0",
     "hyperscript": "2.0.2",
     "pull-scroll" : "1.0.9",
     "pull-stream": "3.6.0"
