--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ssb-embedded-chat",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "A small widget for private chats between two people conducted via scuttlebutt. I will be using this for a game chat box for ssb-chess.",
   "main": "index.js",
   "scripts": {
@@ -11,8 +11,11 @@
     "url": "http://www.github.com/happy0/ssb-embedded-chat"
   },
   "dependencies": {
+    "depject": "4.1.1",
+    "depnest": "1.3.0",
     "hyperscript": "2.0.2",
-    "pull-scroll" : "1.0.9",
+    "patchcore": "1.15.0",
+    "pull-scroll": "1.0.9",
     "pull-stream": "3.6.0"
   },
   "author": "Gordon Martin",
