--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "depject": "4.1.1",
     "depnest": "1.3.0",
     "hyperscript": "2.0.2",
+    "lodash": "^4.17.10",
     "pull-scroll": "1.0.9",
     "pull-stream": "3.6.0"
   },
