--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ssb-embedded-chat",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "A small widget for private chats between two people conducted via scuttlebutt. I will be using this for a game chat box for ssb-chess.",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,7 @@
     "depnest": "1.3.0",
     "hyperscript": "2.0.2",
     "lodash": "^4.17.10",
+    "pull-abortable": "^4.1.1",
     "pull-scroll": "1.0.9",
     "pull-stream": "3.6.0"
   },
