--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "depject": "4.1.1",
     "depnest": "1.3.0",
     "hyperscript": "2.0.2",
-    "lodash": "^4.17.10",
     "pull-abortable": "^4.1.1",
     "pull-cat": "^1.1.11",
     "pull-scroll": "1.0.9",
     "pull-stream": "3.6.0"
   },
   "author": "Gordon Martin",
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "devDependencies": {
+    "ssb-client": "^4.9.0"
+  }
 }
